Change font family for header and body

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,4 +1,10 @@
 h1 {
   color: #954535;
   font-size: 72px;
+  font-family: cursive;
+}
+
+body {
+  font-family: 'Arial';
+  text-align: center;
 }
